--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <div class="collab-icon">
                 <i class="fa-solid fa-handshake"></i>&nbsp;&nbsp;&nbsp;
-                <h1>Let’s Collaborate</h1>
+                <h1>Connect</h1>
             </div>
             <ul class="menuContact" id="menuContact">
                 <li><a href="index.html"><i class="fa-solid fa-house"></i>&nbsp;Home</a></li>
