Commenting the contact.html

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar">
             <div class="collab-icon">
-                <i class="fa-solid fa-handshake"></i>&nbsp;&nbsp;&nbsp;
+                <!-- <i class="fa-solid fa-handshake"></i>&nbsp;&nbsp;&nbsp; -->
                 <h1>Connect</h1>
             </div>
             <ul class="menuContact" id="menuContact">
